Version 0.1 December 23, 2010
- New: Added CRoutedCollection abstract class, implements design to use primary key based sharding
- New: Added CRoutedException class, implements exception that is caused in routed collection operations
- Chg: Renamed IStoragedModel to IStorageModel
- New: Added more phpdoc

December 29, 2010
- Added CHashRoutedCollection
- Refactoring of CStorageCollection to CBaseCollection with IApplicationComponent interface.

December 30, 2010
- Optimize refactoring, using Yii CProfileLogRoute.

January 6, 2011
- Added CCachedDbStorage
- Deleted finder code, because it's no a fine way to create API reference.
- Simple rename refactoring, fixed phpdoc
- Fixed CDbStorage to save order.